Add permgen value